--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -16,6 +16,7 @@ body {
 
 // --- HEADER ---
 %nav-header {
+  @include centerWhenScrollBar;
   @include display-flex;
   @include justify-content(center);
   text-align: center;
@@ -83,6 +84,7 @@ body {
 
 // --- MAIN ---
 #main {
+  @include centerWhenScrollBar;
   @include flex-grow(1);
   @include display-flex;
   @include justify-content(center);
@@ -111,6 +113,7 @@ body {
 
 // --- FOOTER ---
 %footer-base {
+  @include centerWhenScrollBar;
   @include display-flex;
   color: grey;
   font-family: 'Hind';
